# create-oneboot

./: README.md  grammar.json  jest.config.mjs  node-types.json  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
__tests__/: parse-java.test.ts
__tests__/utils/: fun.test.ts  parse-java.test.ts  reactive.test.ts
scripts/: build.mjs  jest.setup.ts
src/: define.ts  gen-vo-mapper.ts  global-impl.ts  global.d.ts  index.ts  never.d.ts  parseStore.ts  root.json
src-rust/: Cargo.toml
src-rust/src/: build.rs  error.rs  java_code_demo.rs  lib.rs  parser.rs
src-rust/src/_pest_home/: java.pest
src-rust/src/parser/: java_pest.rs  java_sitter.rs
src/commands/: gen-vo-mapper.ts
src/commands/gen-vo-mapper/: configure.ts  index.ts
src/domains/: args.ts  i18n.ts
src/domains/__tests__/: gen-vo-mapper.test.ts
src/domains/gen-vo-mapper/: gen.ts  index.ts  path.ts
src/i18n/: define.ts  en.ts  index.ts  zh.ts
src/lang/: define.ts  en.ts  index.ts  zh.ts
src/locale/: en.ts  zh.ts
src/stores/: args.ts  gen-vo-mapper.ts  i18n.ts
src/utils/: business.ts  common.ts  define.ts  fun.ts  io.ts  package-info.ts  parser.ts  questions.ts  reactive.ts  str.ts
src/utils/__tests__/: fun.test.ts  parse-java.test.ts  tree-sitter-demo.test.ts
tests/: index.test.ts
