[package]
name = "wasm"
version = "0.1.0"
authors = ["EricFox <841958335@qq.com>"]
edition = "2021"

build = "src/build.rs"

[lib]
name = "wasm"
crate-type = ["rlib", "cdylib"]

[features]
default = ["pest"]
debug = ["console_error_panic_hook"]
pest = ["dep:pest", "dep:pest_derive"]
tree-sitter = ["dep:tree-sitter", "dep:tree-sitter-java"]


[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2"
thiserror = "1"
serde = "1"
serde_json = "1"
pest = { version = "2", features = ["std", "pretty-print"], optional = true }
pest_derive = { version = "2", optional = true }
tree-sitter = { version = "0", optional = true }
tree-sitter-java = { version = "0", optional = true }
tree-sitter-language = { version = "0", optional = true }

[build-dependencies]
cc = "1"
bindgen = "0"

[profile.release]
opt-level = "s"
lto = true
