[package]
name = "wasm"
version = "0.1.0"
authors = ["AlphaFoxz <841958335@qq.com>"]
edition = "2021"

build = "src/build.rs"

[lib]
name = "wasm"
crate-type = ["rlib", "cdylib"]

[features]
default = ['debug']
debug = ["console_error_panic_hook"]


[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2"
thiserror = "1"
serde = "1"
serde_json = "1"

[build-dependencies]
cc = "1"
bindgen = "0"

[profile.release]
opt-level = "s"
lto = true
